2006-Oct-15  Heikki Junnila <hjunnila@users.sf.net>
	* Fixed a number of bugs concerning adding, removing and renaming
	  of functions and devices.
	* Now scene editor, function manager and device manager are aware
	  of functions/devices that are added/removed/renamed in another
	  window than their own.

2006-Sep-23  Heikki Junnila <hjunnila@users.sf.net>
	* Improved the plugin manager to show active plugins with an icon
	* Device manager is only created when it is open, unlike previously,
	  when it consumed memory even though it was not open nor used.

2006-Sep-22  Heikki Junnila <hjunnila@users.sf.net>
	* Added a preliminary plugin manager to File menu.

2006-Sep-13  Heikki Junnila <hjunnila@users.sf.net>
	* Fixed a bug in XYPad, which didn't save the channels' reverse state

2006-Sep-08  Heikki Junnila <hjunnila@users.sf.net>
	* Fixed EFX run order & direction, which didn't work at all before.

2006-Sep-03  Heikki Junnila <hjunnila@users.sf.net>
	* Fixed a bug in efxeditor: correct start & stop scenes were not
	  selected when the dialog was opened a second time.
	* --> Changed combos to listviews so that the function ID can
	  be hidden from the user.
	* Fixed some tooltips in plugin config dialogs.

2006-Sep-01  Heikki Junnila <hjunnila@users.sf.net>
	* Added double click as a default action for "Edit" in function
	  manager's editing mode, and "Select" as the default action in
	  selection mode.
	* Changed all columns to show focus in collection editor.

2006-Aug-31  Heikki Junnila <hjunnila@users.sf.net>
	* Added Fedora-specific stuff & error solution to libs/usbdmx/README

2006-Aug-31  Heikki Junnila <hjunnila@users.sf.net>
	* Changed a double value in app.cpp to t_value (int) to get rid of
	  the compiler warning.
	* Changed newdevice.cpp so that if the user has not touched the
	  name field, it will be filled with the device model. If the user
	  types something, the name is not replaced, unless length == 0.