@@ -1,0 +1,49 @@
+#
+# Q Light Controller device class definition file
+#
+Entry = Device Class
+Manufacturer = Eurolite
+Model = LED PAR56
+Type = Color Changer
+#
+Entry = Channel
+Number = 0
+Name = Red
+# Capability Entries
+0-0 = OFF
+1-255 = Red Mix
+Entry = Channel
+Number = 1
+Name = Green
+# Capability Entries
+0-0 = OFF
+1-255 = Green Mix
+Entry = Channel
+Number = 2
+Name = Blue
+# Capability Entries
+0-0 = OFF
+1-255 = Blue Mix
+Entry = Channel
+Number = 3
+Name = Macro
+# Capability Entries
+0-15 = Macro OFF
+16-255 = Macro ON
+Entry = Channel
+Number = 4
+Name = Speed/Strobe
+# Capability Entries
+0-255 = Speed
+Entry = Channel
+Number = 5
+Name = Mode
+# Capability Entries
+0-31 = Dimmer
+32-63 = Decreasing brightness
+64-95 = Increasing brightness
+96-127 = Decreasing brightness then increasing brightness
+128-159 = Auto color mix
+160-191 = 3-color flash
+192-223 = 7-color flash
+224-255 = Sound control
