@@ -8,6 +8,7 @@ dist_fixtures_DATA = \
 	Botex-T-6.deviceclass \
 	Elation-Color-Spot-150.deviceclass \
 	Elation-Vision-250.deviceclass \
+	Eurolite-LED-PAR56.deviceclass \
 	Futurelight-AHS-150.deviceclass \
 	Futurelight-CF-200.deviceclass \
 	Futurelight-CY-200.deviceclass \
